Fixed pre tag going oob on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -305,6 +305,7 @@ section {
 			background-color: #272822;
 			border-radius: 10px;
 			padding: 15px;
+			overflow-x: auto;
 
 			code {
 				background-color: initial;
